small screens overclipping fixed, contactPage design edit

--- a/UI/Navbar/Navbar.module.css
+++ b/UI/Navbar/Navbar.module.css
@@ -45,6 +45,7 @@
     width: 70px;
     height: 20px;
     margin-top: 100px;
+    color: #666;
 }
 
 .firstListItem {
