--- a/components/ProjectsPage/Project/Project.module.css
+++ b/components/ProjectsPage/Project/Project.module.css
@@ -125,3 +125,9 @@
         width: 350px;
     }
 }
+
+@media only screen and (max-width: 380px) {
+    .project {
+        width: 300px;
+    }
+}
